# DiskMonitor

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
include/: FileScanner.h
src/: FileScanner.cpp  main.cpp  srcmain.cpp
